# saxo

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  README.md  TODO.md  example_usage.py  params.json  params.json.template  pyproject.toml  saxo  saxo-auth.py  saxo-auth.sh  saxo.py  saxo_tokens.json  tokens.json
.github/workflows/: pages.yml
NOTINUSE/: saxo-auth.py  saxo.py
cli/: __init__.py  __main__.py  saxocli.py
docs/: oauth-redirect.html
saxo_sdk/: __init__.py  auth.py  client.py  formatter.py  orders.py  portfolio.py
saxo_trading_app/: __main__.py  app.py  config.py  dictionary.py  order_scheduler.py  requirements.txt  token_manager.py
saxo_trading_app/templates/: authenticate.html  positions.html
scripts/: coverage.py
shared/: __init__.py  auth.py  client.py  config.py  dictionary.py  formatter.py  runtime.py
tests/: test_auth.py  test_client.py  test_config.py  test_orders.py  test_portfolio.py  test_runtime.py  test_saxocli_follow.py  test_saxocli_orders.py
web/: __init__.py  __main__.py  app.py  order_scheduler.py
web/templates/: authenticate.html  positions.html
